--- a/Campus Activity Hub PRO/appsettings.json
+++ b/Campus Activity Hub PRO/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DbProject": "Server=(localdb)\\MSSQLLocalDB;Database=DbProject6;Integrated Security=True;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
